Corrected web_app source.

--- a/sqlapp/appsettings.Development.json
+++ b/sqlapp/appsettings.Development.json
@@ -1,9 +1,6 @@
 {
-  "DetailedErrors": true,
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "SQLConnection": 
+    "Server=tcp": ",: trial-db.database.windows.net, 1433;Initial Catalog=appdb;Persist Security Info=False; User ID=marwaan; Password=Cannonbolt1@;MultipleActiveResultSets=False;Encrypt=FalsetrustServerCertificate=False;Connection Timeout =30;"
   }
 }
